--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 <body>
     <form action="" method="post">
          <p>digite seu nome</p>
-         <input type="text" name="nome">
+         <input type="text" name="nome" placeholder="Nome completo"> <br>
+         <input type="email" name="email" value="@escola.pr.gov.br"> <br>
+         <input type="number" name="telefone" placeholder="(xx) xxxxx-xxxx">
+         <input type="radio" name="trabalho" value="sim"> com certeza
+         <input type="radio" name="trabalho" value="não"> sem certeza <br>
+         <input type="checkbox" name="novidades" checked> aceito receber novidades
+         <select name="estados" id=""></select>
+         <option value="1">São Paulo</option>
+         <option value="2">Paraná</option>
+         <option value="3">Rio Grande Do SUl</option>
+         <option value="4">Santa Catarina</option>
+         
     </form>
+
 </body>
 </html>
