--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nicayas</title>
 </head>
+
 <body>
     <form action="" method="post">
-         <p>digite seu nome</p>
-         <input type="text" name="nome" placeholder="Nome completo"> <br>
-         <input type="email" name="email" value="@escola.pr.gov.br"> <br>
-         <input type="number" name="telefone" placeholder="(xx) xxxxx-xxxx">
-         <input type="radio" name="trabalho" value="sim"> com certeza
-         <input type="radio" name="trabalho" value="não"> sem certeza <br>
-         <input type="checkbox" name="novidades" checked> aceito receber novidades
-         <select name="estados" id=""></select>
-         <option value="1">São Paulo</option>
-         <option value="2">Paraná</option>
-         <option value="3">Rio Grande Do SUl</option>
-         <option value="4">Santa Catarina</option>
-         
+        <p>digite seu nome</p>
+        <input type="text" name="nome" placeholder="Nome completo"> <br>
+        <input type="email" name="email" value="@escola.pr.gov.br"> <br>
+        <input type="number" name="telefone" placeholder="(xx) xxxxx-xxxx">
+        <input type="radio" name="trabalho" value="sim"> com certeza
+        <input type="radio" name="trabalho" value="não"> sem certeza <br>
+        <input type="checkbox" name="novidades" checked> aceito receber novidades <br>
+        <select name="estados" id=""></select>
+        <option value="1">São Paulo</option>
+        <option value="2">Paraná</option>
+        <option value="3">Rio Grande Do SUl</option>
+        <option value="4">Santa Catarina</option>
+        </section> <br>
+        <p>insira seu comentario</p>
+        <textarea name="comentario" id=""></textarea>
+        <p></p>
+        <button type="submit"> enviar </button>
+        <button type="reset"> apagar </button>
     </form>
 
 </body>
+
 </html>
