--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <form action="" method="post">
         <p>digite seu nome</p>
-        <input type="text" name="nome" placeholder="Nome completo"> <br>
-        <input type="email" name="email" value="@escola.pr.gov.br"> <br>
-        <input type="number" name="telefone" placeholder="(xx) xxxxx-xxxx">
+        <input type="text" name="nome" placeholder="Nome completo" required> <br>
+        <input type="email" name="email" value="@escola.pr.gov.br" required> <br>
+        <input type="number" name="telefone" placeholder="(xx) xxxxx-xxxx" required> <br>
         <input type="radio" name="trabalho" value="sim"> com certeza
         <input type="radio" name="trabalho" value="não"> sem certeza <br>
         <input type="checkbox" name="novidades" checked> aceito receber novidades <br>
@@ -20,7 +20,7 @@
         <option value="1">São Paulo</option>
         <option value="2">Paraná</option>
         <option value="3">Rio Grande Do SUl</option>
-        <option value="4">Santa Catarina</option>
+        <option value="4">Santa Catarina</option> <br>
         </section> <br>
         <p>insira seu comentario</p>
         <textarea name="comentario" id=""></textarea>
