--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form action="" method="post">
         <p>digite seu nome</p>
         <input type="text" name="nome" placeholder="Nome completo" required> <br>
-        <input type="email" name="email" value="@escola.pr.gov.br" required> <br>
+        <input type="email" name="email" value="gmail.com" required> <br>
         <input type="number" name="telefone" placeholder="(xx) xxxxx-xxxx" required> <br>
         <input type="radio" name="trabalho" value="sim"> com certeza
         <input type="radio" name="trabalho" value="não"> sem certeza <br>
