--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <input type="text" name="nome" placeholder="Nome completo" required> <br>
         <input type="email" name="email" value="gmail.com" required> <br>
         <input type="number" name="telefone" placeholder="(xx) xxxxx-xxxx" required> <br>
-        <input type="radio" name="trabalho" value="sim"> com certeza
-        <input type="radio" name="trabalho" value="não"> sem certeza <br>
+        <input type="radio" name="tem filhos?" value="sim"> sim
+        <input type="radio" name="trabalho" value="não"> não <br>
         <input type="checkbox" name="novidades" checked> aceito receber novidades <br>
         <select name="estados" id=""></select>
         <option value="1">São Paulo</option>
