--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <form action="" method="post">
         <p>digite seu nome</p>
         <input type="text" name="nome" placeholder="Nome completo" required> <br>
+        <p>Digite seu email</p>
         <input type="email" name="email" value="gmail.com" required> <br>
+        <p>insira seu numero</p>
         <input type="number" name="telefone" placeholder="(xx) xxxxx-xxxx" required> <br>
+        <p>tem filhos?</p>
         <input type="radio" name="filhos" value="sim"> sim
         <input type="radio" name="filhos" value="não"> não <br>
         <input type="checkbox" name="novidades" checked> aceito receber novidades <br>
