--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <input type="radio" name="filhos" value="não"> não <br>
         <input type="checkbox" name="novidades" checked> aceito receber novidades <br>
         <select name="estados" id=""></select>
+        <p>selecione seu estado</p>
         <option value="1">São Paulo</option>
         <option value="2">Paraná</option>
         <option value="3">Rio Grande Do SUl</option>
