--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="" method="post">
+    <form action="https://formspree.io/f/xkgwbgjy" method="post">
         <p>digite seu nome</p>
         <input type="text" name="nome" placeholder="Nome completo" required> <br>
         <p>Digite seu email</p>
@@ -23,7 +23,7 @@
         <p>selecione seu estado</p>
         <option value="1">São Paulo</option>
         <option value="2">Paraná</option>
-        <option value="3">Rio Grande Do SUl</option>
+        <option value="3">Rio Grande Do Sul</option>
         <option value="4">Santa Catarina</option> <br>
         </section> <br>
         <p>insira seu comentario</p>
