--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
         <p>digite seu nome</p>
         <input type="text" name="nome" placeholder="Nome completo" required> <br>
         <p>Digite seu email</p>
-        <input type="email" name="email" value="gmail.com" required> <br>
+        <input type="email" name="e-mail" value="@gmail.com" required> <br>
         <p>insira seu numero</p>
         <input type="number" name="telefone" placeholder="(xx) xxxxx-xxxx" required> <br>
         <p>tem filhos?</p>
-        <input type="radio" name="filhos" value="sim"> sim
+        <input type="radio" name="filhos" value="sim" required> sim
         <input type="radio" name="filhos" value="não"> não <br>
+        <p>Autorização</p>
         <input type="checkbox" name="novidades" checked> aceito receber novidades <br>
-        <select name="estados" id=""></select>
         <p>selecione seu estado</p>
+        <select name="estados" id="" required>
         <option value="1">São Paulo</option>
         <option value="2">Paraná</option>
         <option value="3">Rio Grande Do Sul</option>
