--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <option value="1">São Paulo</option>
         <option value="2">Paraná</option>
         <option value="3">Rio Grande Do Sul</option>
-        <option value="4">Santa Catarina</option> <br>
+        <option value="4">Santa Catarina</option> 
         </section> <br>
         <p>insira seu comentario</p>
         <textarea name="comentario" id=""></textarea>
