--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <input type="checkbox" name="novidades" checked> aceito receber novidades <br>
         <p>selecione seu estado</p>
         <select name="estados" id="" required>
-        <option value="1">São Paulo</option>
-        <option value="2">Paraná</option>
-        <option value="3">Rio Grande Do Sul</option>
-        <option value="4">Santa Catarina</option> 
-        </section> <br>
-        <p>insira seu comentario</p>
-        <textarea name="comentario" id=""></textarea>
-        <p></p>
-        <button type="submit"> enviar </button>
-        <button type="reset"> apagar </button>
+            <option value="1">São Paulo</option>
+            <option value="2">Paraná</option>
+            <option value="3">Rio Grande Do Sul</option>
+            <option value="4">Santa Catarina</option>
+        </select> <br>
+            <p>insira seu comentario</p>
+            <textarea name="comentario" id=""></textarea>
+            <p></p>
+            <button type="submit"> enviar </button>
+            <button type="reset"> apagar </button>
     </form>
 
 </body>
